@@ -414,40 +414,73 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>io.github.fvarrui</groupId>
-                        <artifactId>javapackager</artifactId>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>3.1.0</version>
+
                         <executions>
                             <execution>
-                                <id>bundling-for-windows-arm64</id>
                                 <phase>package</phase>
                                 <goals>
-                                    <goal>package</goal>
+                                    <goal>run</goal>
                                 </goals>
-                                <configuration>
-                                    <mainClass>redisfx.tanh.rdm.ui.Main</mainClass>
-                                    <bundleJre>true</bundleJre>
-                                    <modules>${modules}</modules>
-                                    <!--                                    <jdkPath>D:\soft\jdk\jdk-21_windows-i586\jdk-21.0.7</jdkPath>-->
-                                    <jdkPath>${env.JAVA_HOME}</jdkPath>
-                                    <generateInstaller>true</generateInstaller>
-                                    <administratorRequired>false</administratorRequired>
-                                    <platform>windows</platform>
-                                    <createZipball>true</createZipball>
-                                    <winConfig>
-                                        <!--                                        <headerType>console</headerType>-->
-                                        <icoFile>src/main/resources/icon/fx_icon_256.ico</icoFile>
-                                        <generateSetup>true</generateSetup>
-                                        <generateMsi>true</generateMsi>
-                                        <generateMsm>true</generateMsm>
 
-                                    </winConfig>
-                                    <vmArgs>
-                                        <arg>--module-path</arg>
-                                        <arg>libs</arg>
-                                        <arg>--add-modules</arg>
-                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.base</arg>
-                                        <arg>-XX:+UseZGC</arg>
-                                    </vmArgs>
+                                <configuration>
+                                    <target>
+
+                                        <delete dir="${project.build.directory}/custom-jre" failonerror="false"/>
+
+                                        <exec executable="jlink">
+                                            <arg value="--output"/>
+                                            <arg value="${project.build.directory}/custom-jre"/>
+
+                                            <arg value="--add-modules"/>
+                                            <arg value="${modules}"/>
+
+                                            <arg value="--compress=2"/>
+                                            <arg value="--no-header-files"/>
+                                            <arg value="--no-man-pages"/>
+                                        </exec>
+
+                                        <mkdir dir="${project.build.directory}/input"/>
+
+                                        <copy
+                                                file="${project.build.directory}/rdm-ui-${rdm.version}-jar-with-dependencies.jar"
+                                                todir="${project.build.directory}/input"/>
+
+                                        <exec executable="jpackage">
+
+                                            <arg value="--type"/>
+                                            <arg value="exe"/>
+
+                                            <arg value="--name"/>
+                                            <arg value="RedisFX"/>
+
+                                            <arg value="--input"/>
+                                            <arg value="${project.build.directory}/input"/>
+
+                                            <arg value="--main-jar"/>
+                                            <arg value="rdm-ui-${rdm.version}-jar-with-dependencies.jar"/>
+
+                                            <arg value="--main-class"/>
+                                            <arg value="redisfx.tanh.rdm.ui.Main"/>
+
+                                            <arg value="--runtime-image"/>
+                                            <arg value="${project.build.directory}/custom-jre"/>
+
+                                            <arg value="--icon"/>
+                                            <arg value="src/main/resources/icon/fx_icon_256.ico"/>
+
+                                            <arg value="--win-dir-chooser"/>
+                                            <arg value="--win-menu"/>
+                                            <arg value="--win-shortcut"/>
+
+                                            <arg value="--dest"/>
+                                            <arg value="${project.build.directory}"/>
+
+                                        </exec>
+
+                                    </target>
                                 </configuration>
                             </execution>
                         </executions>
@@ -561,38 +594,7 @@
             </activation>
             <build>
                 <plugins>
-                   <!-- <plugin>
-                        <groupId>io.github.fvarrui</groupId>
-                        <artifactId>javapackager</artifactId>
-                        <version>1.7.6</version>
-                        <executions>
-                            <execution>
-                                <id>bundling-for-macos-x86_64</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>package</goal>
-                                </goals>
-                                <configuration>
-                                    <platform>mac</platform>
-                                    <mainClass>redisfx.tanh.rdm.ui.Main</mainClass>
-                                    <bundleJre>true</bundleJre>
-                                    <modules>${modules}</modules>
-                                    <createTarball>false</createTarball>
-                                    <generateInstaller>false</generateInstaller>
-                                    <jdkPath>${env.JAVA_HOME}</jdkPath>
-                                    <macConfig>
-                                        <icnsFile>src/main/resources/icon/fx_icon_256.icns</icnsFile>
-                                    </macConfig>
-                                    <vmArgs>
-                                        <arg>&#45;&#45;module-path</arg>
-                                        <arg>libs</arg>
-                                        <arg>&#45;&#45;add-modules</arg>
-                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.base</arg>
-                                    </vmArgs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>-->
+
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
@@ -657,39 +659,7 @@
                 <plugins>
 
 
-                  <!--  <plugin>
-                        <groupId>io.github.fvarrui</groupId>
-                        <artifactId>javapackager</artifactId>
-                        <version>1.7.6</version>
-                        <executions>
-                            <execution>
-                                <id>bundling-for-macos-arm64</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>package</goal>
-                                </goals>
-                                <configuration>
-                                    <platform>mac</platform>
-                                    <mainClass>redisfx.tanh.rdm.ui.Main</mainClass>
-                                    <bundleJre>true</bundleJre>
-                                    <modules>${modules}</modules>
-                                    <createTarball>false</createTarball>
-                                    <generateInstaller>false</generateInstaller>
-                                    <jdkPath>${env.JAVA_HOME}</jdkPath>
-                                    <macConfig>
-                                        <icnsFile>src/main/resources/icon/fx_icon_256.icns</icnsFile>
-                                        <entitlements>src/main/resources/assets/entitlements.plist</entitlements>
-                                    </macConfig>
-                                    <vmArgs>
-                                        <arg>&#45;&#45;module-path</arg>
-                                        <arg>libs</arg>
-                                        <arg>&#45;&#45;add-modules</arg>
-                                        <arg>javafx.controls,javafx.fxml,javafx.graphics,javafx.base</arg>
-                                    </vmArgs>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>-->
+
 
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
